--- a/src/Cap05/Capitulo5.tex
+++ b/src/Cap05/Capitulo5.tex
@@ -9,10 +9,10 @@ A abordagem foi avaliada em cenários distintos, propiciando uma análise qualit
 trajetórias em diferentes condições de restrições cinemáticas e de desempenho do manipulador.
 
 Perspectivas futuras para o trabalho, incluem o estudo da escolha ótima de um ganho \(k_0\), visando otimizar 
-o desempenho do manipulador em diferentes cenários e também uma análise estatística mais aprofundada dos resultados obtidos, com o objetivo de avaliar a robustez do
+o desempenho do manipulador em diferentes cenários e também uma análise teórica/estatística mais aprofundada dos resultados obtidos, com o objetivo de avaliar a robustez do
 controlador e a convergência para soluções ótimas. Além disso, é desejável explorar cadeias cinemáticas 
 mais complexas, como as dos manipuladores do tipo \emph{elbow} e \emph{wrist}, que possuem um maior 
 grau de redundância tipicamente maior que 7, permitindo a resolução não so a nível do controle da posição, mas 
-tamém da orientação do efetuador final. Vale ressaltar também que uma continuidade natural para o trabalho 
+também da orientação do efetuador final. Vale ressaltar também que uma continuidade natural para o trabalho 
 é a transferência dos resultados para um robô real e a integração em um \emph{framework} de planejamento de trajetórias, permitindo
 a validação do esquema de controle em cenários mais realistas e desafiadores.
