--- a/src/Ref/SampleReferences.bib
+++ b/src/Ref/SampleReferences.bib
@@ -2,6 +2,16 @@
 
 %%% Chapter 01 %%%
 
+@book{craig2004,
+  title     = {Introduction to Robotics: Mechanics and Control},
+  author    = {Craig, John J.},
+  edition   = {3rd},
+  year      = {2004},
+  publisher = {Pearson Prentice Hall},
+  address   = {Upper Saddle River, NJ}
+}
+
+
 @inproceedings{li2023pseudo,
   title        = {A Pseudo-Inverse Redundancy-Based Resolution Scheme at the Acceleration Level to Control Robotic Arm Motion},
   author       = {Li, Qu and Cang, Naimeng and Zhang, Weidong and Guo, Dongsheng and Zhang, Canwei},
@@ -58,6 +68,21 @@
 
 %%% Chapter 02 %%%
 
+@article{denavit1955,
+  title     = {A Kinematic Notation for Lower-Pair Mechanisms Based on Matrices},
+  volume    = {22},
+  issn      = {1528-9036},
+  url       = {http://dx.doi.org/10.1115/1.4011045},
+  doi       = {10.1115/1.4011045},
+  number    = {2},
+  journal   = {Journal of Applied Mechanics},
+  publisher = {ASME International},
+  author    = {Denavit, J. and Hartenberg, R. S.},
+  year      = {1955},
+  month     = jun,
+  pages     = {215–221}
+}
+
 @book{spong_robot_2020,
   address   = {Hoboken, NJ},
   edition   = {Second edition},
@@ -113,6 +138,13 @@
   doi       = {10.1007/978-3-540-30301-5},
   keywords  = {Basic Principles and Methods of Robotics, Biologically-Inspired Robots, Bopp2009, Industrial Robotics, Life-Like Robotics, Manipulation and Interfaces of Robots, Mobile and Distributed Robotics, MRWCat2007, Roboethics, Robot Structures, Robotics, Robotics Foundations, Sensing and Perception of Robots, Springer Handbook of Robotics},
   file      = {Full Text PDF:/home/hgtllys/Zotero/storage/AVWWFIYD/Siciliano and Khatib - 2008 - Springer Handbook of Robotics.pdf:application/pdf}
+}
+
+@inproceedings{yoshikawa1983,
+  title  = {Analysis and Control of Robot Manipulators with Redundancy},
+  author = {Tsuneo Yoshikawa},
+  year   = {1983},
+  url    = {https://api.semanticscholar.org/CorpusID:56558599}
 }
 
 %%% Chapter 03 %%%
