--- a/src/main.tex
+++ b/src/main.tex
@@ -7,6 +7,7 @@
 \usepackage{makecell}
 \usepackage{booktabs}
 \usepackage{algpseudocode, algorithm}
+\usepackage{hyperref}
 
 \floatname{algorithm}{Algoritmo}
 
